--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  fluttertoast: ^8.2.2
+  stylish_bottom_bar: ^1.0.3
+  image_picker: ^1.0.4
+  carousel_slider: ^4.2.1
+  flutter_spinkit: ^5.2.0
+  
 
 dev_dependencies:
   flutter_test:
