--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_spinkit: ^5.2.0
   video_player: ^2.7.2
+  flutter_rating_bar: ^4.0.1
   
 
 dev_dependencies:
