--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_spinkit: ^5.2.0
   video_player: ^2.7.2
   flutter_rating_bar: ^4.0.1
+  google_fonts: ^4.0.1
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
