--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   google_fonts: ^4.0.1
   font_awesome_flutter: ^10.6.0
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
