--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_svg: ^2.0.8
   lottie: ^2.7.0
   flutter_staggered_grid_view: ^0.7.0
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
