--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   lottie: ^2.7.0
   flutter_staggered_grid_view: ^0.7.0
   sqflite: ^2.3.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
