--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,12 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   sqflite: ^2.3.0
   shared_preferences: ^2.2.2
+  floor:
+
 
 dev_dependencies:
+  floor_generator:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
