--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,14 @@ dependencies:
   sqflite: ^2.3.0
   shared_preferences: ^2.2.2
   floor:
+  get_storage: ^2.1.1
+  hive: ^2.2.3
+  hive_flutter:
 
 
 dev_dependencies:
   floor_generator:
+  hive_generator:
   build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
@@ -86,6 +90,7 @@ flutter:
     - assets/animiction/
     - assets/talak_images/
     - assets/svg_image/icons/
+    - assets/svg_image/student_reg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
