--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dependencies:
   hive_flutter:
   provider: ^6.1.1
   get: ^4.6.6
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   floor_generator:
