--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
+  crypto: ^3.0.3
+  firebase_storage: ^11.5.6
 
 dev_dependencies:
   floor_generator:
